force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Allowed_Domains__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Allowed_Domains__c</fullName>
    <label>Allowed Domains</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>