force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Auto_Set_Default_Record_Folder__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Auto_Set_Default_Record_Folder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Set Default Record Folder</label>
    <type>Checkbox</type>
</CustomField>