force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Automation_Email__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Automation_Email__c</fullName>
    <label>Automation Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>