force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Automation_Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Automation_Refresh_Token__c</fullName>
    <label>Automation Refresh Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>