force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Content_Folders__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Content_Folders__c</fullName>
    <label>Content Folders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>