force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Debug_Enabled__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Debug_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Enabled</label>
    <type>Checkbox</type>
</CustomField>