force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Default_Object_Folder_Mappings__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Default_Object_Folder_Mappings__c</fullName>
    <label>Default Object Folder Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>