force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Inbound_Authenticated_User__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Inbound_Authenticated_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Authenticated User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Setup_Data</relationshipName>
    <type>Lookup</type>
</CustomField>