force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Job_Frequency__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Job_Frequency__c</fullName>
    <description>How often the scheduled job will run</description>
    <inlineHelpText>How often the scheduled job will run</inlineHelpText>
    <label>Job Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24</fullName>
                <default>true</default>
                <label>Once Daily</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Every Hour</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Every 2 Hours</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Every 3 Hours</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Every 4 Hours</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Every 6 Hours</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Every 8 Hours</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Every 12 Hours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>