force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Job_Id__c</fullName>
    <description>Id for the scheduled batch job</description>
    <inlineHelpText>Id for the scheduled batch job</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>