force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Job_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Job_Start_Time__c</fullName>
    <description>Time of day at which the first run of the scheduled job will occur</description>
    <label>Job Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASAP</fullName>
                <label>As Soon As Possible</label>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>12:00 AM</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1:00 AM</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2:00 AM</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3:00 AM</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4:00 AM</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5:00 AM</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6:00 AM</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7:00 AM</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8:00 AM</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9:00 AM</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10:00 AM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11:00 AM</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12:00 PM</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>1:00 PM</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>2:00 PM</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>3:00 PM</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>4:00 PM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>5:00 PM</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>6:00 PM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>7:00 PM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>8:00 PM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>9:00 PM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>10:00 PM</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>11:00 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>