force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Link_Files__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Link_Files__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Link Files</label>
    <type>Checkbox</type>
</CustomField>