force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Link_Folders__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Link_Folders__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Link Folders</label>
    <type>Checkbox</type>
</CustomField>