force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Log_Deletion_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Log_Deletion_Job_Id__c</fullName>
    <description>Used to store id of log deletion batch that can be run from Package Log Settings section of setup</description>
    <label>Log Deletion Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>