force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Logging_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>