force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Max_Logs_Retained__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Max_Logs_Retained__c</fullName>
    <label>Max Logs Retained</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
                <default>true</default>
                <label>1,000</label>
            </value>
            <value>
                <fullName>5000</fullName>
                <label>5,000</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <label>10,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>