force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Onboarding_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Complete</label>
    <type>Checkbox</type>
</CustomField>