force-app/main/default/objects/shareconnect__Setup_Data__c/fields/shareconnect__Upload_Delete_Behavior__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Upload_Delete_Behavior__c</fullName>
    <defaultValue>&quot;never&quot;</defaultValue>
    <label>Upload Delete Behavior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>